--- a/bots.cabal
+++ b/bots.cabal
@@ -21,5 +21,6 @@ executable hurl
     main-is:        hurl.hs
     ghc-options:    -O2 -optl-static -optl-pthread
     extensions:     DoAndIfThenElse
-    build-depends:  base, containers, mtl, tagsoup, regex-tdfa, wreq, http-client, lens, text, bytestring
+    build-depends:  base, containers, mtl, tagsoup, regex-tdfa, wreq,
+                    http-client, lens, text, bytestring, pdf-toolbox-document
 
