--- a/bots.cabal
+++ b/bots.cabal
@@ -22,5 +22,5 @@ executable hurl
     ghc-options:    -O2 -optl-static -optl-pthread
     extensions:     DoAndIfThenElse
     build-depends:  base, containers, mtl, tagsoup, regex-tdfa, wreq,
-                    http-client, lens, text, bytestring, pdf-toolbox-document
+                    http-client, lens, text, bytestring, pdfinfo
 
