--- a/bots.cabal
+++ b/bots.cabal
@@ -21,6 +21,6 @@ executable hurl
     main-is:        hurl.hs
     ghc-options:    -O2 -optl-static -optl-pthread
     extensions:     DoAndIfThenElse
-    build-depends:  base, containers, mtl, tagsoup, regex-tdfa, wreq,
+    build-depends:  base, containers, mtl, tagsoup, regex-tdfa, wreq, process,
                     http-client, lens, text, bytestring, pdfinfo
 
