Improve utf-8 detection.
Robust against spaces after the semicolon and letter case (utf vs UTF)
in the Content-Type HTTP header field.

--- a/bots.cabal
+++ b/bots.cabal
@@ -22,5 +22,5 @@ executable hurl
     ghc-options:    -O2 -optl-pthread
     extensions:     DoAndIfThenElse
     build-depends:  base, containers, mtl, tagsoup, regex-tdfa, wreq, process,
-                    http-client, lens, text, bytestring, pdfinfo
+                    http-client, lens, text, bytestring, pdfinfo, word8
 
