--- a/bots.cabal
+++ b/bots.cabal
@@ -21,7 +21,7 @@ executable hurl
     main-is:        hurl.hs
     ghc-options:    -O2 -optl-pthread
     extensions:     OverloadedStrings, LambdaCase
-    build-depends:  base, containers, mtl, tagsoup, regex-tdfa, wreq, process,
+    build-depends:  base, containers, mtl, tagsoup, wreq, process,
                     http-client, http-types, lens, text, bytestring, pdfinfo,
                     word8
 
