--- a/ircbots.cabal
+++ b/ircbots.cabal
@@ -19,9 +19,9 @@ source-repository head
 
 executable hurl
     main-is:        hurl.hs
-    ghc-options:    -O2 -optl-pthread
+    ghc-options:    -optl-pthread
     extensions:     OverloadedStrings, LambdaCase
-    build-depends:  base, containers, mtl, tagsoup, wreq, process,
+    build-depends:  base, tagsoup, wreq, process, irc-client,
                     http-client, http-types, lens, text, bytestring, pdfinfo,
                     word8
 
